*SVN*

* Fix broken assert_generates when extra keys are being checked. [Jamis Buck]

* Replace KCODE checks with String#chars for truncate.  Closes #6385 [Manfred Stienstra]

* Make page caching respect the format of the resource that is being requested even if the current route is the default route so that, e.g. posts.rss is not transformed by url_for to '/' and subsequently cached as '/index.html' when it should be cached as '/posts.rss'.  [Marcel Molina Jr.]

* Use String#chars in TextHelper::excerpt. Closes #6386 [Manfred Stienstra]

* Install named routes into ActionView::Base instead of proxying them to the view via helper_method. Closes #5932. [Nicholas Seckar]

* Update to latest Prototype and script.aculo.us trunk versions [Thomas Fuchs]

* Fix relative URL root matching problems. [Mark Imbriaco]

* Fix filter skipping in controller subclasses.  #5949, #6297, #6299 [Martin Emde]

* render_text may optionally append to the response body. render_javascript appends by default. This allows you to chain multiple render :update calls by setting @performed_render = false between them (awaiting a better public API).  [Jeremy Kemper]

* Rename test assertion to prevent shadowing. Closes #6306. [psross]

* Fixed that NumberHelper#number_to_delimiter should respect precision of higher than two digits #6231 [phallstrom]

* Fixed that FormHelper#radio_button didn't respect an :id being passed in #6266 [evansj]

* Added an html_options hash parameter to javascript_tag() and update_page_tag() helpers #6311 [tzaharia]. Example:

    update_page_tag :defer => 'true' { |page| ... }

  Gives:

    <script defer="true" type="text/javascript">...</script>
    
  Which is needed for dealing with the IE6 DOM when it's not yet fully loaded.

* Fixed that rescue template path shouldn't be hardcoded, then it's easier to hook in your own #6295 [mnaberez]

* Fixed escaping of backslashes in JavaScriptHelper#escape_javascript #6302 [sven@c3d2.de]
